added shiba background

--- a/position practice/index.html
+++ b/position practice/index.html
@@ -9,7 +9,10 @@
 <body>
 	<nav>
 		<p class = "pp1">Home</p>
-		<p class ="pp2">More Shiba Pics</p>
+		<p class ="pp2"><a href= "https://www.google.com/search?q=dog&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiF_MO2odfTAhUG5WMKHbU2CNYQ_AUICigB&biw=1366&bih=662#tbm=isch&q=shiba">More Shiba Pics</a></p>
 	</nav>
+	<main>
+		<img src = "images/shiba.jpg">
+	</main>
 </body>
 </html>
