added position abs and relative practices

--- a/position practice/index.html
+++ b/position practice/index.html
@@ -8,11 +8,20 @@
 </head>
 <body>
 	<nav>
-		<p class = "pp1">Home</p>
+		<p class = "pp1"><a href="#">Home</a></p>
 		<p class ="pp2"><a href= "https://www.google.com/search?q=dog&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiF_MO2odfTAhUG5WMKHbU2CNYQ_AUICigB&biw=1366&bih=662#tbm=isch&q=shiba">More Shiba Pics</a></p>
 	</nav>
 	<main>
-		<img src = "images/shiba.jpg">
+		<img src = "images/shiba.jpg" alt="shibadoll">
+		<img src ="images/shiba-puppy.png" alt="shiba puppy" class ="left200">
+		<img src = "images/shiba.jpg" alt="shibadoll" class="left400">
+		<img src ="images/shiba-puppy.png" alt="shiba puppy" class ="left600">
+		<img src="images/shiba-puppy.jpg" alt="shiba puppy2"
+		class ="bottom">
+		<img src="images/meme.jpg" alt="meme" class="bottom left200">
+		<img src="images/shiba-puppy.jpg" alt="shiba puppy2"
+		class ="bottom left400">
+		<img src="images/meme.jpg" alt="meme" class="bottom left600">
 	</main>
 </body>
 </html>
